--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -65,3 +65,4 @@ add_test(test_buffer test_buffer)
 add_test(test_format test_format)
 add_test(test_write test_write)
 add_test(test_apdu_parser test_apdu_parser)
+add_test(test_read test_read)
